优化：CoreThink改名部门怒刷一波存在感 上传、评论、标签相关数据表名、控制器名、模型名修改

--- a/Application/Common/Builder/widget/kindeditor.html
+++ b/Application/Common/Builder/widget/kindeditor.html
@@ -18,7 +18,7 @@
                     pasteType : 2,
                     urlType : 'absolute',
                     fileManagerJson : '{:U("Home/Upload/fileManager")}',
-                    uploadJson : '{:U("Home/Upload/upload")}',
+                    uploadJson : '{:U("Home/PublicUpload/upload")}',
                     remoteImgSaveUrl: '{:U("Home/Upload/downremoteimg")}',
                     extraFileUploadParams: {
                         session_id : '{:session_id()}'
