修复：后台上传文件等接口与前台分开 当前台处于关闭状态时，因为后台上传文件调用了前台的接口，导致上传会失败

--- a/Application/Common/Builder/widget/kindeditor.html
+++ b/Application/Common/Builder/widget/kindeditor.html
@@ -17,9 +17,9 @@
                     resizeType: 1,
                     pasteType : 2,
                     urlType : 'absolute',
-                    fileManagerJson : '{:U("Home/Upload/fileManager")}',
-                    uploadJson : '{:U("Home/PublicUpload/upload")}',
-                    remoteImgSaveUrl: '{:U("Home/Upload/downremoteimg")}',
+                    fileManagerJson : '{:U(C("MODULE_MARK")."/Upload/fileManager")}',
+                    uploadJson : '{:U(C("MODULE_MARK")."/PublicUpload/upload")}',
+                    remoteImgSaveUrl: '{:U(C("MODULE_MARK")."/Upload/downremoteimg")}',
                     extraFileUploadParams: {
                         session_id : '{:session_id()}'
                     },
