--- a/Application/Common/Builder/widget/file.html
+++ b/Application/Common/Builder/widget/file.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
         $(function(){
             $('#[type]{$group_k}_upload_{$[type]k}').Huploadify({
-                uploader:'{:U("Home/PublicUpload/upload")}',
+                uploader:'{:U(C("MODULE_MARK")."/PublicUpload/upload")}',
                 fileTypeExts:'*.gif;*.jpg;*.jpeg;*.png;'+
                              '*.swf;*.flv;*.mp3;*.wav;*.wma;*.wmv;*.mid;*.avi;*.mpg;*.asf;*.rm;*.rmvb;*.mp4;'+
                              '*.doc;*.docx;*.xls;*.xlsx;*.ppt;*.pptx;*.wps;*.txt;*.zip;*.rar;*.gz;*.bz2;*.7z',
