--- a/Application/Common/Builder/widget/files.html
+++ b/Application/Common/Builder/widget/files.html
@@ -21,7 +21,7 @@
                 uploader:'{:U(C("MODULE_MARK")."/PublicUpload/upload")}',
                 fileTypeExts:'*.gif;*.jpg;*.jpeg;*.png;'+
                              '*.swf;*.flv;*.mp3;*.wav;*.wma;*.wmv;*.mid;*.avi;*.mpg;*.asf;*.rm;*.rmvb;*.mp4;'+
-                             '*.doc;*.docx;*.xls;*.xlsx;*.ppt;*.pptx;*.wps;*.txt;*.zip;*.rar;*.gz;*.bz2;*.7z',
+                             '*.doc;*.docx;*.xls;*.xlsx;*.ppt;*.pptx;*.pdf;*.wps;*.txt;*.zip;*.rar;*.gz;*.bz2;*.7z',
                 fileSizeLimit:{:C('UPLOAD_FILE_SIZE')}*1024,
                 buttonText:'添加文件',
                 onUploadComplete:function(file, data){
