--- a/Application/Common/Builder/widget/kindeditor.html
+++ b/Application/Common/Builder/widget/kindeditor.html
@@ -8,8 +8,9 @@
             KindEditor.ready(function(K) {
                 kindeditor_{$[type]k} = K.create('#[type]{$group_k}_kindeditor_{$[type]k}', {
                     allowFileManager : true,
-                    width: '100%',
-                    height: '500px',
+                    filePostName : 'file',
+                    width : '100%',
+                    height : '500px',
                     cssPath : [
                         '__PUBLIC__/libs/bootstrap/dist/css/bootstrap.min.css',
                         '__PUBLIC__/libs/kindeditor/plugins/code/prettify.css'
