修复：Kindeditor文件浏览与下载远程图片地址错误 新增：文件浏览器可控制是否只显示图片参数

--- a/Application/Common/Builder/widget/kindeditor.html
+++ b/Application/Common/Builder/widget/kindeditor.html
@@ -18,9 +18,9 @@
                     resizeType: 1,
                     pasteType : 2,
                     urlType : 'absolute',
-                    fileManagerJson : '{:U(C("MODULE_MARK")."/Upload/fileManager")}',
+                    fileManagerJson : '{:U(C("MODULE_MARK")."/PublicUpload/fileManager")}',
                     uploadJson : '{:U(C("MODULE_MARK")."/PublicUpload/upload")}',
-                    remoteImgSaveUrl: '{:U(C("MODULE_MARK")."/Upload/downremoteimg")}',
+                    remoteImgSaveUrl: '{:U(C("MODULE_MARK")."/PublicUpload/downremoteimg")}',
                     extraFileUploadParams: {
                         session_id : '{:session_id()}'
                     },
