--- a/Application/Common/Builder/widget/files.html
+++ b/Application/Common/Builder/widget/files.html
@@ -42,7 +42,7 @@
                 }
             });
             //删除文件
-            $('#[type]{$group_k}_preview_{$[type]k} .remove-file').click(function(){
+            $(document).on('click', '#[type]{$group_k}_preview_{$[type]k} .remove-file', function() {
                 var ready_for_remove_id = $(this).closest('.file-item').attr('data-id'); //获取待删除的文件ID
                 if(!ready_for_remove_id) {
                     $.alertMessager('错误', 'danger');
