--- a/Application/Common/Builder/widget/pictures.html
+++ b/Application/Common/Builder/widget/pictures.html
@@ -33,7 +33,7 @@
                 }
             });
             //删除图片
-            $('#[type]{$group_k}_preview_{$[type]k} .remove-picture').click(function(){
+            $(document).on('click', '#[type]{$group_k}_preview_{$[type]k} .remove-picture', function() {
                 var ready_for_remove_id = $(this).closest('.img-box').find('img').attr('data-id'); //获取待删除的图片ID
                 if(!ready_for_remove_id){
                     $.alertMessager('错误', 'danger');
